--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-debug-toolbar==1.3.2
 django-embed-video==1.0.0
 django-filter==0.10.0
 django-oauth-toolkit==0.8.2
+django-random-queryset==0.0.3
 django-rest-auth==0.5.0
 django-taggit==0.17.0
 django-taggit-serializer==0.1.1
@@ -15,6 +16,7 @@ Markdown==2.6.2
 mysqlclient==1.3.6
 oauthlib==0.7.2
 Pillow==2.9.0
+psycopg2==2.5.4
 python3-openid==3.0.6
 requests==2.7.0
 requests-oauthlib==0.5.0
