--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 defusedxml==0.4.1
 Django==1.8.3
+django-admin-bootstrapped==2.5.5
 django-allauth==0.23.0
+django-bootstrap3==6.2.2
 django-braces==1.8.1
 django-cors-headers==1.1.0
 django-debug-toolbar==1.3.2
