--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-filter==0.10.0
 django-oauth-toolkit==0.8.2
 django-random-queryset==0.0.3
 django-rest-auth==0.5.0
+django-subdomains==2.0.4
 django-taggit==0.17.0
 django-taggit-serializer==0.1.1
 djangorestframework==3.1.3
