--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-debug-toolbar==1.3.2
 django-embed-video==1.0.0
 django-filter==0.10.0
 django-oauth-toolkit==0.8.2
+django-paypal==0.2.5
 django-random-queryset==0.0.3
 django-rest-auth==0.5.0
 django-subdomains==2.0.4
@@ -24,5 +25,6 @@ python3-openid==3.0.6
 requests==2.7.0
 requests-oauthlib==0.5.0
 six==1.9.0
+South==1.0.2
 sqlparse==0.1.16
 wheel==0.24.0
