--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 defusedxml==0.4.1
+diff-match-patch==20121119
 Django==1.8.3
 django-admin-bootstrapped==2.5.5
 django-allauth==0.23.0
+django-appconf==1.0.1
 django-bootstrap3==6.2.2
 django-braces==1.8.1
 django-cors-headers==1.1.0
 django-debug-toolbar==1.3.2
 django-embed-video==1.0.0
 django-filter==0.10.0
+django-import-export==0.4.0
+django-ipware==1.1.2
 django-oauth-toolkit==0.8.2
 django-paypal==0.2.5
 django-random-queryset==0.0.3
@@ -17,15 +21,18 @@ django-taggit==0.17.0
 django-taggit-serializer==0.1.1
 django-taggit-suggest==0.2
 djangorestframework==3.1.3
+GeoIP==1.3.2
 Markdown==2.6.2
+maxminddb==1.2.0
 mysqlclient==1.3.6
 oauthlib==0.7.2
 Pillow==2.9.0
 psycopg2==2.5.4
 python3-openid==3.0.6
-requests==2.7.0
+requests==2.8.1
 requests-oauthlib==0.5.0
-six==1.9.0
+six==1.10.0
 South==1.0.2
 sqlparse==0.1.16
+tablib==0.10.0
 wheel==0.24.0
