--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,14 @@ django-oauth-toolkit==0.8.2
 django-paypal==0.2.5
 django-random-queryset==0.0.3
 django-rest-auth==0.5.0
-django-subdomains==2.0.4
+django-subdomains==2.1.0
 django-taggit==0.17.0
 django-taggit-serializer==0.1.1
--e git+https://github.com/frankwiles/django-taggit-suggest.git@dba7ca11ff68227271c7408170918f1421fb5238#egg=django_taggit_suggest-origin/master
+-e git+https://github.com/frankwiles/django-taggit-suggest.git#egg=django-taggit-suggest
 djangorestframework==3.1.3
 GeoIP==1.3.2
 Markdown==2.6.2
 maxminddb==1.2.0
-mysqlclient==1.3.6
 oauthlib==0.7.2
 Pillow==2.9.0
 psycopg2==2.5.4
