--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,43 @@
-defusedxml==0.4.1
+bootstrap-admin==0.3.7.1
+certifi==2017.4.17
+chardet==3.0.3
+defusedxml==0.5.0
 diff-match-patch==20121119
-Django==1.8.3
-django-admin-bootstrapped==2.5.5
-django-allauth==0.23.0
-django-appconf==1.0.1
-django-bootstrap3==6.2.2
-django-braces==1.8.1
-django-cors-headers==1.1.0
-django-debug-toolbar==1.3.2
-django-embed-video==1.0.0
-django-filter==0.10.0
-django-import-export==0.4.0
-django-ipware==1.1.2
-django-oauth-toolkit==0.8.2
-django-paypal==0.2.5
-django-random-queryset==0.0.3
-django-rest-auth==0.5.0
+Django==1.11.2
+django-allauth==0.32.0
+django-appconf==1.0.2
+django-bootstrap3==8.2.3
+django-braces==1.11.0
+django-cors-headers==2.1.0
+django-debug-toolbar==1.8
+django-embed-video==1.1.2
+django-environ==0.4.3
+django-filter==1.0.4
+django-import-export==0.5.1
+django-ipware==1.1.6
+django-oauth-toolkit==0.12.0
+django-paypal==0.3.6
+django-rest-auth==0.9.1
 django-subdomains==2.1.0
-django-taggit==0.17.0
-django-taggit-serializer==0.1.1
--e git+https://github.com/frankwiles/django-taggit-suggest.git#egg=django-taggit-suggest
-djangorestframework==3.1.3
+django-taggit==0.22.1
+django-taggit-serializer==0.1.5
+-e git+https://github.com/frankwiles/django-taggit-suggest.git@dba7ca11ff68227271c7408170918f1421fb5238#egg=django_taggit_suggest
+djangorestframework==3.6.3
 GeoIP==1.3.2
-Markdown==2.6.2
-maxminddb==1.2.0
-oauthlib==0.7.2
-Pillow==2.9.0
-psycopg2==2.5.4
-python3-openid==3.0.6
-requests==2.8.1
-requests-oauthlib==0.5.0
+idna==2.5
+Markdown==2.6.8
+maxminddb==1.3.0
+mysqlclient==1.3.10
+oauthlib==2.0.2
+olefile==0.44
+Pillow==4.1.1
+psycopg2==2.7.1
+python3-openid==3.1.0
+pytz==2017.2
+requests==2.17.3
+requests-oauthlib==0.8.0
 six==1.10.0
 South==1.0.2
-sqlparse==0.1.16
-tablib==0.10.0
-wheel==0.24.0
-django-environ==0.4.3
+sqlparse==0.2.3
+tablib==0.11.4
+urllib3==1.21.1
